<resources>

    <string name="app_name">AM02150_toDoList</string>
    <string name="action_settings">Settings</string>
    <string name="taskDisplay">Tasks</string>
    <string name="remindersDisplay">Reminders</string>
    <string name="empty_overview"></string>
    <string name="hello">Hello</string>
    <string name="delete_message"> Are you sure you want to delete this task? </string>
    <string name="delete"> Delete </string>
    <string name="cancel"> Cancel </string>
    <string name="dashboard_main">Dashboard</string>
    <string name="completed_tasks">Completed Tasks</string>
    <string name="overviewDisplay">Overview</string>
    <string name="taskOverviewDisplay">Task Overview</string>
    <string name="numberOfStepsDisplay"> steps to set... </string>
    <string name="dueDateDisplay">Due Date</string>
    <string name="title_activity_new_ro">newRoA</string>
    <string name="title_activity_new_reminder_or">newReminderOrActivity</string>
    <string name="newTask">New Task</string>
    <string name="newReminder">New Reminder</string>
    <string name="title_activity_new_task">New Task</string>
    <string name="add_new_task">Add New Task</string>
    <string name="title_activity_new_steps">New Steps for Task</string>
    <string name="title_activity_view_tasks">View Tasks</string>
    <string name="title_activity_edit_task">View Task</string>
    <string name="title_activity_edit_steps">View Steps</string>
    <string name="steps">Steps.</string>
    <string name="empty">Empty</string>
    <string name="check_mark">✓</string>
    <string name="done">Done</string>
    <string name="home">Home</string>
    <string name="title_activity_new_location">NewLocation</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="add_location">📍           Add Location</string>
    <string name="title_activity_view_location">ViewLocation</string>
    <string name="distance">Distance</string>
    <string name="reach_in">Reach in</string>
    <string name="reach_in_2">Reach destination in</string>
    <string name="address">Address</string>
    <string name="next_tasks">Upcoming task overview</string>
    <string name="app_title">Your Task Organiser...</string>






</resources>
