<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:foregroundGravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/main_dashboard_title"
        android:foregroundGravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="5dp"
        android:paddingVertical="10dp"
        tools:layout_editor_absoluteX="111dp"
        tools:layout_editor_absoluteY="375dp">

        <TextView
            android:id="@+id/deleteMessageId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/lato_thin"
            android:text="@string/delete_message"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancelButtonId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/dialog_cancel_button"
                android:fontFamily="@font/lato_thin"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/deleteButtonId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/dialog_delete_button"
                android:fontFamily="@font/lato_thin"
                android:text="@string/delete" />


        </LinearLayout>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>