<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.bakry.AM02150_toDoList.MainActivity"
    tools:layout_editor_absoluteY="137dp"
    tools:showIn="@layout/activity_main"
    android:layout_gravity="center"
    android:foregroundGravity="center">




    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="25dp"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:background="@drawable/main_dashboard_background_left"
            android:text="@string/app_title"
            android:fontFamily="@font/lato_thin"
            android:layout_marginLeft="20dp"
            android:textSize="30dp"
            android:textStyle="bold"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:orientation="vertical"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/main_dashboard_title"
                android:text="@string/next_tasks"
                android:fontFamily="@font/lato_thin"
                android:layout_marginHorizontal="15dp"
                android:gravity="center"
                android:textStyle="bold"
                />


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                >


                <Button
                    android:id="@+id/bViewNextTaskId"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/main_dashboard_button" />




                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginHorizontal="15dp"
                    >

                    <LinearLayout
                        android:layout_width="200dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/step_outline"
                        android:orientation="vertical"
                        android:layout_marginRight="5dp"
                        >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/identifiers_layout"
                            android:layout_weight="3"
                            android:layout_marginTop="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_marginLeft="5dp"
                            android:fontFamily="@font/lato_thin"
                            android:text="@string/address"
                            android:textColor="@color/colorPrimaryDark"
                            android:gravity="center"
                            android:textStyle="bold"
                            />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:id="@+id/currentLocationTextViewId"
                            android:layout_weight="1"
                            android:layout_marginTop="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginBottom="5dp"
                            android:fontFamily="@font/lato_thin"
                            android:gravity="center"

                            />



                </LinearLayout>



                    <LinearLayout
                        android:layout_width="200dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/step_outline"
                        android:orientation="vertical"
                        >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/identifiers_layout"
                            android:layout_weight="3"
                            android:layout_marginTop="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_marginLeft="5dp"
                            android:fontFamily="@font/lato_thin"
                            android:text="@string/reach_in_2"
                            android:textColor="@color/colorPrimaryDark"
                            android:gravity="center"
                            android:textStyle="bold"
                            />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:id="@+id/reachInTextViewId"
                            android:layout_weight="1"
                            android:layout_marginTop="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginBottom="5dp"
                            android:fontFamily="@font/lato_thin"
                            android:gravity="center"
                            android:textSize="30dp"

                            />

                    </LinearLayout>




                </LinearLayout>


            </FrameLayout>



        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/bViewTasks"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/main_dashboard_button" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/vTasks"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="22dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/main_dashboard_title"
                        android:fontFamily="@font/ubuntu_light"
                        android:text="Dashboard"
                        android:textColor="@android:color/black"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/dayNameId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="3dp"
                        android:layout_marginLeft="150dp"
                        android:layout_marginTop="7dp"
                        android:fontFamily="@font/advent_pro_extralight"
                        android:gravity="center"
                        android:textColor="#999999"
                        tools:textSize="18sp" />

                    <TextView
                        android:id="@+id/dayNumberId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="3dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="7dp"
                        android:background="@drawable/main_date_textview"
                        android:fontFamily="@font/advent_pro_extralight"
                        android:gravity="center"
                        android:textColor="#999999" />

                    <TextView
                        android:id="@+id/monthNumberId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="3dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="7dp"
                        android:background="@drawable/main_date_textview"
                        android:fontFamily="@font/advent_pro_extralight"
                        android:gravity="center"
                        android:textColor="#999999" />

                    <TextView
                        android:id="@+id/yearNumberId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="3dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="7dp"
                        android:background="@drawable/main_date_textview"
                        android:fontFamily="@font/advent_pro_extralight"
                        android:gravity="center"
                        android:textColor="#999999" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="182dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/main_dashboard_background_left"
                        android:gravity="center_vertical"
                        android:orientation="vertical">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/todayTasksId"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"

                                android:layout_marginLeft="10dp"
                                android:layout_marginTop="7dp"
                                android:background="@drawable/main_dashboard_number"
                                android:fontFamily="@font/lato_thin"
                                android:gravity="center"
                                android:textSize="18sp"
                                tools:textColor="@android:color/white" />

                            <TextView
                                android:id="@+id/textView2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:layout_marginTop="7dp"
                                android:fontFamily="@font/lato_thin"
                                android:text="for"
                                android:textStyle="italic" />

                            <TextView
                                android:id="@+id/textView3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="6dp"
                                android:layout_marginTop="5dp"
                                android:fontFamily="@font/lato_thin"
                                android:text="Today"
                                android:textSize="22sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/upcomingTasksId"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:layout_marginTop="7dp"
                                android:background="@drawable/main_dashboard_number"
                                android:fontFamily="@font/lato_thin"
                                android:gravity="center"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/textView4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:layout_marginTop="7dp"
                                android:fontFamily="@font/lato_thin"
                                android:text="for"
                                android:textStyle="italic" />

                            <TextView
                                android:id="@+id/textView5"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="6dp"
                                android:layout_marginTop="5dp"
                                android:fontFamily="@font/lato_thin"
                                android:text="Later..."
                                android:textSize="22sp" />

                        </LinearLayout>

                    </LinearLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_marginRight="10dp">

                        <TextView
                            android:id="@+id/percentageCompletedId"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="5dp"
                            android:fontFamily="@font/advent_pro_extralight"
                            android:textColor="@android:color/black" />

                        <ProgressBar
                            android:id="@+id/circularProgressbar"
                            style="?android:attr/progressBarStyleHorizontal"
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="20dp"
                            android:indeterminate="false"
                            android:max="100"
                            android:progress="25"
                            android:progressDrawable="@drawable/circular_progressbar"
                            android:secondaryProgress="100" />
                    </FrameLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/footerId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/main_date_textview"
                    android:fontFamily="@font/lato_thin"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="10dp" />

            </LinearLayout>


        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="1">


        </FrameLayout>

        <Button
            android:id="@+id/bNewTaskReminder"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/main_add_new_button"
            android:fontFamily="@font/lato_thin"
            android:paddingHorizontal="20dp"
            android:paddingVertical="5dp"
            android:text="+      Add New Task"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="194dp"
            tools:layout_editor_absoluteY="16dp" />


    </LinearLayout>


</android.support.constraint.ConstraintLayout>